--- a/card-trick.html
+++ b/card-trick.html
@@ -13,10 +13,10 @@
         <a class="card" href="#">
             <div class="card_background"
                  style="background-image: url(https://images.unsplash.com/photo-1557177324-56c542165309?ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80)"></div>
-            <div class="card_content">
-                <p class="card_category">Art</p>
-                <h3 class="card_heading">Check out my art!</h3>
-            </div>
+<!--            <div class="card_content">-->
+<!--                <p class="card_category">Art</p>-->
+<!--                <h3 class="card_heading">Check out my art!</h3>-->
+<!--            </div>-->
         </a>
         <a class="card" href="#">
             <div class="card_background"
