--- a/index.html
+++ b/index.html
@@ -91,6 +91,11 @@
                 <a href="matrix-rain.html">
                     <img class="portfolio-image" src="images/project-images/1.jpeg" alt="Project Image">
                 </a>
+                <div class="portfolio-item-description">
+                <p>
+                    Wanna see something cool?
+                </p>
+                </div>
             </div>
             <div class="portfolio-grid-item" data-project-type="commercial">
                 <a href="">
